fix(enterprise LP): Spacing tweak

--- a/src/pages/enterprise-page/enterprise-page.scss
+++ b/src/pages/enterprise-page/enterprise-page.scss
@@ -369,6 +369,16 @@ ul {
 
         margin-block-start: 4rem;
         margin-block-end: 3.5rem;
+
+        @media (max-width: $screen-md-max) {
+          margin-block-start: 1rem;
+          margin-block-end: 1rem;
+        }
+
+        @media (max-width: $screen-xs) {
+          margin-block-start: 0rem;
+          margin-block-end: 0rem;
+        }
       }
 
       p {
